GSAP was fixed on heropage, product page alignment fixed

--- a/src/output.css
+++ b/src/output.css
@@ -107,7 +107,7 @@
 }
 
 /*
-! tailwindcss v3.4.13 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.14 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -598,7 +598,7 @@ video {
 
 .top-0 {
   top: 0px;
-
+}
 
 .z-10 {
   z-index: 10;
@@ -689,10 +689,6 @@ video {
 
 .flex {
   display: flex;
-}
-
-.table {
-  display: table;
 }
 
 .grid {
@@ -808,7 +804,7 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-
+}
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -960,7 +956,7 @@ video {
 .bg-\[rgb\(220\2c 220\2c 220\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(220 220 220 / var(--tw-bg-opacity));
-
+}
 
 .bg-black {
   --tw-bg-opacity: 1;
